# triggermodules

./: CMakeLists.txt  DAQDuneTriggersConfig.cmake.in  README.md
cmake/: DAQDuneTriggersConfig.cmake.in
conf/: simplest_trigger.json
doc/: overview.drawio
plugins/: CommonIssues.hpp  DAQTriggerActivityMaker.cpp  DAQTriggerCandidateMaker.cpp  DAQTriggerDecisionMaker.cpp  DAQTriggerPrimitiveMaker.cpp  DAQTriggerTimingCandidateMaker.cpp  FakeDFO.cpp  TriggerPrimitiveFromFile.cpp  TriggerPrimitiveFromFile_Nljs.hpp  TriggerPrimitiveFromFile_Structs.hpp  TriggerPrimitiveHE.cpp  TriggerPrimitiveRadiological.cpp  TriggerPrimitiveSupernova.cpp  TriggerPrimitiveTiming.cpp
schema/: 1toNTP_trigger_app.jsonnet  1toNTP_trigger_app_compiled.json  2csv-to-1-trigger_app.jsonnet  DAQDuneTriggers-RandomTriggerPrimitive-app.jsonnet  DAQDuneTriggers-TriggerPrimitiveFromFile-schema.jsonnet  DAQDuneTriggers-trigger-app.jsonnet  Nto1_trigger_app.jsonnet  TP_only_test.jsonnet  compile_and_run.sh  csv_trigger_app.jsonnet  csv_trigger_app_compiled.json  daqdunetrigger-triggerprimitivefromfile-schema.jsonnet  dfo_app.jsonnet  example.csv  full_csv_trigger_app.jsonnet  full_trigger_app.jsonnet  full_trigger_app_compiled.json  generate.sh  moo_compile.note  simplest_trigger.py  simplest_trigger_app.jsonnet  simplest_trigger_app_compiled.json  time_stamped_data_app.jsonnet  timing_message_app.jsonnet  trigger_app_thiago_compiled.json  triggermodules-DAQTriggerActivityMaker-make.jsonnet  triggermodules-DAQTriggerActivityMaker-schema.jsonnet  triggermodules-DAQTriggerCandidateMaker-make.jsonnet  triggermodules-DAQTriggerCandidateMaker-schema.jsonnet  triggermodules-DAQTriggerDecisionMaker-make.jsonnet  triggermodules-DAQTriggerDecisionMaker-schema.jsonnet  triggermodules-FakeDFO-schema.jsonnet  triggermodules-RandomTriggerPrimitive-app.jsonnet  triggermodules-TriggerPrimitiveFromFile-make.jsonnet  triggermodules-TriggerPrimitiveFromFile-schema.jsonnet
schema/latency/: pkg1.csv  pkg10.csv  pkg2.csv  pkg5.csv  pkg50.csv  start-test.sh  tp-1-1-1-1.jsonnet  tp-1-1-1-1_compiled.json  tp-2-2-1-1.jsonnet  tp-2-2-1-1_compiled.json  tp-3-3-1-1.jsonnet  tp-3-3-1-1_compiled.json
src/: CommonIssues.hpp  DAQTriggerActivityMaker.cpp  DAQTriggerCandidateMaker.cpp  DAQTriggerDecisionMaker.cpp  TriggerPrimitiveRadiological.cpp  TriggerPrimitiveSupernova.cpp
test/: DAQDuneTriggers-trigger-app.json  simplest_trigger.json
